# flstudio-mcp-mac

./: .gitignore  .mcpbignore  LICENSE  README.md  manifest.json  mcpb_entry.py  pyproject.toml  server.json
.github/workflows/: release.yml  test.yml
docs/: fl-studio-api-notes.md  publishing.md  testing.md
fl_scripts/midi_controller/FLStudioMCP/: device_FLStudioMCP.py
fl_scripts/piano_roll/: FL Studio MCP Apply.pyscript
src/flstudio_mcp_mac/: __init__.py  bridge.py  daemon.py  install.py  midi_file.py  protocol.py  server.py
tests/: test_bridge_mock.py  test_daemon_bridge.py  test_install.py  test_mcp_stdio.py  test_midi_file.py  test_protocol.py  test_server_helpers.py
