[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "flstudio-mcp-mac"
version = "0.1.2"
description = "macOS-first MCP bridge for FL Studio using CoreMIDI and FL Studio Python MIDI scripts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Puyarahmanian" }
]
keywords = ["fl-studio", "mcp", "music-production", "midi", "macos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
  "mcp>=1.9.0",
  "python-rtmidi>=1.5.8",
]

[project.urls]
Homepage = "https://github.com/purahmanian/flstudio-mcp-mac"
Repository = "https://github.com/purahmanian/flstudio-mcp-mac"
Issues = "https://github.com/purahmanian/flstudio-mcp-mac/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
flstudio-mcp-mac = "flstudio_mcp_mac.server:main"
flstudio-mcp-mac-daemon = "flstudio_mcp_mac.daemon:main"
flstudio-mcp-mac-install = "flstudio_mcp_mac.install:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flstudio_mcp_mac"]

[tool.hatch.build.targets.wheel.force-include]
"fl_scripts" = "flstudio_mcp_mac/fl_scripts"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/manifest.json",
  "/mcpb_entry.py",
  "/server.json",
  "/docs",
  "/fl_scripts",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
